# omni_multi_agent

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
conversational_agent/: conversational_agent.py
docs/: ARCHITECTURE.md  DEPLOYMENT.md  SETUP.md
docs/plans/: deployment-guide-implementation.md  progress-20251112-112559-deployment-guide-implementation.md
examples/: README.md  advanced_workflows.py  basic_usage.py
infrastructure/aws/: ecs-task-definition.json
infrastructure/aws/terraform/: main.tf  outputs.tf  variables.tf
kubernetes/: agent-deployment.yaml  configmap.yaml  ingress.yaml  letta-deployment.yaml  namespace.yaml  persistent-volume.yaml  secrets.yaml.template  service.yaml
monitoring/: docker-compose.monitoring.yml  grafana-dashboard.json  prometheus-config.yaml
orchestrator_agent/: orchestrator_agent.py
preferences_agent/: preferences_agent.py
projects_agent/: projects_agent.py
scripts/: export_agent_ids.sh  health_check.py  initialize_agents.py
tasks_agent/: tasks_agent.py
